# gpu_practice

./: .env  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeListsbakcuda.txt  Makefile  README.md  cmake_install.cmake  dependencies.txt  envUnix.cmake  notes.txt  todos.txt  unixBuild.sh
..prevulkan/: .gitignore  Makefile
..prevulkan/Exercicios ja corrigidos/openacc - 2/solver/: jsolvec.cpp
..prevulkan/Exercicios ja corrigidos/openmp - 1/: starrynight
..prevulkan/assets/shaders/shadows/: dirShadow.fs
..prevulkan/cuda/particleSystem/: basic.vs  main.cu
..prevulkan/cuda/particleSystem/jaxeUtils/: jx_particle.h
..prevulkan/notes/: changes.md
..prevulkan/src/: glad.c  main.cpp
..prevulkan/src/algorithms/: bounds.h
..prevulkan/src/io/: camera.h
..prevulkan/src/physics/: collisionmesh.cpp  environment.cpp
Exercicios ja corrigidos/: imageShorteningParallel.cu
Exercicios ja corrigidos/openacc - 2/: README.md
assets/: buffer.fs  fragment_core.glsl  lamp.fs  object.fs  object.vs  outline.fs  text.fs  text.vs  vertex_core.glsl
assets/instanced/: box.fs  box.vs  instanced.vs
assets/shaders/: buffer.fs  defaultHeader.gh  depth.fs  object.fs  outline.vs
assets/shaders/instanced/: instanced.vs
assets/shaders/shadows/: dirSpotShadow.vs  directionalshadow.vs  pointShadow.fs  pointShadow.gs  pointShadow.vs  pointSpotShadow.fs  shadow.vs
cuda/exercicios de aula/: imageShortening.cu  matrixSum.cu  reduce.cu  vecadd.cu
cuda/particleSystem/: jaxeUtils.h  main.cu  particle.h
cuda/particleSystem/io/: keyboard.h  mouse.h
cuda/particleSystem/jaxeUtils/: jx_generator.h  jx_geometry.h  jx_math.h  jx_particle.h  jx_physics.h  jx_utils.h
ignorethis/exercicios_de_aula/: reduce_global.cu
lib/: glad.c
lib/assimp-5.3.1/: Makefile  assimp.pc  cmake_install.cmake  cmake_uninstall.cmake  revision.h
lib/assimp-5.3.1/code/: Makefile  cmake_install.cmake
lib/assimp-5.3.1/contrib/zlib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/assimp-5.3.1/test/: Makefile  cmake_install.cmake
lib/assimp-5.3.1/test/headercheck/: Makefile  cmake_install.cmake
lib/freetype-2.13.2/: cmake_install.cmake
lib/glad/: glad.h
notes/: changes.md  computer_graphics.md  cpp_notes.md  math.md  observations.txt  opengl.md  setup.md  todo.md
openmp - 1/: starrynight.cpp
prevulkan/: CMakeLists.txt  LICENSE  myProfileReport.nsys-rep
prevulkan/Exercicios ja corrigidos/openacc - 2/solver/: Makefile  jsolvec
prevulkan/assets/shaders/: buffer.vs  object.fs  object.vs
prevulkan/assets/shaders/instanced/: instanced.vs
prevulkan/assets/skybox/: sky.fs
prevulkan/cuda/particleSystem/: basic.fs
prevulkan/cuda/particleSystem/jaxeUtils/: jx_physics.h
prevulkan/ignorethis/exercicios_de_aula/: reduce.cu  sharedMem1.cu
prevulkan/imgs/: teste1.png~
prevulkan/lib/: stb.cpp
prevulkan/notes/: observations.txt  optimizations.md  setup.md
prevulkan/src/: scene.cpp  scene.h
prevulkan/src/algorithms/: avl.cpp  bounds.cpp  octree.cpp  octree.h  states.hpp
prevulkan/src/graphics/memory/: uniformmemory.hpp
prevulkan/src/graphics/models/: box.hpp  brickwall.hpp  cube.hpp  gun.hpp  plane.hpp  sphere.hpp
prevulkan/src/graphics/objects/: mesh.cpp  model.cpp
prevulkan/src/graphics/rendering/: light.h  text.cpp  text.h
prevulkan/src/io/: keyboard.cpp  keyboard.h  mouse.cpp
prevulkan/src/physics/: collisionmesh.cpp  collisionmodel.h  rigidbody.cpp  rigidbody.h
shaders/: multiview.frag  multiview.geom  multiview.vert  point_light.frag  point_light.frag.spv  point_light.geom  point_light.vert  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.geom  simple_shader.vert  simple_shader.vert.spv
src/: Octree.md  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  first_app.cpp  first_app.hpp  frame_info.hpp  game_object.cpp  game_object.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  model.cpp  model.hpp  observations.txt  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.h  shader.cpp  shader.h  simple_render_system.cpp  simple_render_system.hpp  swap_chain.cpp  swap_chain.hpp  ud_utils.hpp  window.cpp  window.hpp
src/algorithms/: avl.h  bounds.cpp  bounds.h  list.hpp  oMC_octree.cpp  octree.cpp  octree.h  old_octree.cpp  states.hpp  trie.hpp
src/algorithms/cmathematics/: matrix.cpp
src/algorithms/math/: linalg.cpp  linalg.h
src/graphics/: cubemap.cpp  cubemap.h  framememory.hpp  glmemory.hpp  light.cpp  light.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  text.cpp  text.h  texture.cpp  texture.h  uniformmemory.hpp  vertexmemory.hpp
src/graphics/memory/: framememory.hpp  vertexmemory.hpp
src/graphics/models/: box.hpp  brickwall.hpp  cube.hpp  gun.hpp  lamp.hpp  modelarray.hpp  plane.hpp  sphere.hpp
src/graphics/objects/: mesh.cpp  mesh.h  model.cpp  model.h
src/graphics/rendering/: cubemap.cpp  cubemap.h  text.h
src/io/: Joystick.cpp  Joystick.h  Keyboard.cpp  Mouse.cpp  camera.cpp  camera.h  joystick.cpp  joystick.h  keyboard.cpp  keyboard.h  mouse.cpp  mouse.h  screen.cpp  screen.h
src/physics/: collisionmesh.cpp  collisionmesh.h  collisionmodel.cpp  collisionmodel.h  environment.h  rigidbody.cpp  rigidbody.h
src/shaders/: simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
src/systems/: multiview_render_system.cpp  multiview_render_system.hpp  point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
